undo some hetzner insanity

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -13,9 +13,7 @@ registry:
 
 env:
   clear:
-    OLLAMA_URL: http://seeclickfix-ollama:11434
     DATA_DIR: /app/data
-    PIPELINE_START_DATE: "2015-01-01"
 
 volumes:
   - seeclickfix_data:/app/data
@@ -25,13 +23,5 @@ proxy:
   host: seeclickfixsentiment.hackjc.org
   app_port: 8000
 
-accessories:
-  ollama:
-    image: ollama/ollama:latest
-    host: 89.167.56.225
-    port: "11434:11434"
-    volumes:
-      - ollama_models:/root/.ollama
-    cmd: serve
-    options:
-      memory: 8g
+builder:
+  arch: amd64
