--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi>=0.109",
     "uvicorn>=0.27",
     "jinja2>=3.1",
+    "openai>=1.0",
 ]
 
 [project.optional-dependencies]
